--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             padding: 10px 20px;
             border: 2px solid transparent;
             border-radius: 50px;
-            background-image: linear-gradient(to right, #3498db, #e74c3c);
+            background-image: linear-gradient(to right, #3498db, #e74c3c); /* Gradient background */
             text-decoration: none;
             color: #fff;
             font-weight: bold;
@@ -116,7 +116,7 @@
         }
 
         .button-link:hover {
-            background-image: linear-gradient(to right, #e74c3c, #3498db);
+            background-image: linear-gradient(to right, #e74c3c, #3498db); /* Gradient background on hover */
             border: 2px solid #fff;
             box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
             color: #fff;
@@ -164,54 +164,54 @@
         </div>
     </header>
 
-<section class="about-us">
-    <h2>About Us</h2>
-    <p>Your Trusted Partner for Innovative Textile Solutions. Backed by extensive experience with top global brands, we offer tailored R&D and manufacturing services. Our team’s expertise ensures high-quality results, meeting your unique needs with precision and reliability <a href="/about-us" id="see-more-button">read more...</a></p>
-</section>
+    <section class="about-us">
+        <h2>About Us</h2>
+        <p>Your Trusted Partner for Innovative Textile Solutions. Backed by extensive experience with top global brands, we offer tailored R&D and manufacturing services. Our team’s expertise ensures high-quality results, meeting your unique needs with precision and reliability <a href="/about-us" id="see-more-button">read more...</a></p>
+    </section>
 
-<section class="product-performance">
-    <h2>Product Performance</h2>
-    <div>
-        <a data-fancybox="gallery" href="/images/products/P1.jpg"><img src="/images/products/P1.jpg" alt="Product 1"></a>
-        <a data-fancybox="gallery" href="/images/products/P2.jpg"><img src="/images/products/P2.jpg" alt="Product 2"></a>
-        <a data-fancybox="gallery" href="/images/products/P3.jpg"><img src="/images/products/P3.jpg" alt="Product 3"></a>
-        <a data-fancybox="gallery" href="/images/products/P4.jpg"><img src="/images/products/P4.jpg" alt="Product 4"></a>
+    <section class="product-performance">
+        <h2>Product Performance</h2>
+        <div>
+            <a data-fancybox="gallery" href="/images/products/P1.jpg"><img src="/images/products/P1.jpg" alt="Product 1"></a>
+            <a data-fancybox="gallery" href="/images/products/P2.jpg"><img src="/images/products/P2.jpg" alt="Product 2"></a>
+            <a data-fancybox="gallery" href="/images/products/P3.jpg"><img src="/images/products/P3.jpg" alt="Product 3"></a>
+            <a data-fancybox="gallery" href="/images/products/P4.jpg"><img src="/images/products/P4.jpg" alt="Product 4"></a>
+        </div>
+    </section>
+    <div class="see-more">
+        <a href="/products">View products...</a>
     </div>
-</section>
-<div class="see-more">
-    <a href="/products">View products...</a>
-</div>
 
-<section class="clients">
-    <h2>Team Experience with Renowned Brands</h2>
-    <div class="client-logos">
-        <!-- Add your client logos with clickable links -->
-        <a href="#"><img src="/images/uspa.png" alt="USPA"></a>
-        <a href="#"><img src="/images/buffalo.png" alt="Buffalo David Bitton"></a>
-        <a href="#"><img src="/images/cK.png" alt="CK"></a>
-        <a href="#"><img src="/images/max.png" alt="max"></a>
-        <!-- Add more logos as needed -->
-    </div>
-    <p><a href="/client" id="see-more-button">and others</a></p>
-</section>
+    <section class="clients">
+        <h2>Team Experience with Renowned Brands</h2>
+        <div class="client-logos">
+            <!-- Add your client logos with clickable links -->
+            <a href="#"><img src="/images/uspa.png" alt="USPA"></a>
+            <a href="#"><img src="/images/buffalo.png" alt="Buffalo David Bitton"></a>
+            <a href="#"><img src="/images/cK.png" alt="CK"></a>
+            <a href="#"><img src="/images/max.png" alt="max"></a>
+            <!-- Add more logos as needed -->
+        </div>
+        <p><a href="/client" id="see-more-button">and others</a></p>
+    </section>
 
-<section class="contact">
-    <h2>Contact Us</h2>
-    <p>We would love to hear from you! Connect with us on 
-        <a href="https://wa.me/+8801712548608" class="button-link">
-            <span style="color: #fff;">WhatsApp</span>
-        </a> 
-        or drop us an 
-        <a href="mailto:inquiries@mrtex.info" class="button-link">
-            <span style="color: #fff;">Email</span>
-        </a>.
-    </p>
-    <p>House # 05 (2nd Floor), Road # 18, Sector # 10, Uttara, Dhaka-1230, Bangladesh</p>
-</section>
+    <section class="contact">
+        <h2>Contact Us</h2>
+        <p>We would love to hear from you! Connect with us on 
+            <a href="https://wa.me/+8801712548608" class="button-link">
+                WhatsApp
+            </a> 
+            or drop us an 
+            <a href="mailto:inquiries@mrtex.info" class="button-link">
+                Email
+            </a>.
+        </p>
+        <p>House # 05 (2nd Floor), Road # 18, Sector # 10, Uttara, Dhaka-1230, Bangladesh</p>
+    </section>
 
-<!-- Fancybox JavaScript -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
+    <!-- Fancybox JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
 
 </body>
 </html>
