--- a/index.html
+++ b/index.html
@@ -1,217 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" href="/images/MRTex.png" type="image/jpeg">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-    <title>MR Tex</title>
-    <script>
-        // Detect if the user is using a desktop device
-        const isDesktop = !(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent));
-
-        // If it's a desktop device, add a class to the body
-        if (isDesktop) {
-            document.body.classList.add('desktop');
-        }
-    </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Company Name</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
-            background: linear-gradient(to right, #3498db, #e74c3c);
-            color: #fff;
-            text-align: center;
+            background-color: #f4f4f4;
+            color: #333;
         }
 
         header {
-            position: relative;
-            overflow: hidden;
-            height: 120px; /* Adjust the height to accommodate the logo */
-        }
-
-        #top-section {
-            padding: 20px;
-            color: #fff;
             text-align: center;
-            z-index: 2;
-        }
-
-        #logo-section {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            z-index: 3; /* Increase the z-index to ensure the logo is above other elements */
-        }
-
-        #logo-section img {
-            max-width: 100px;
-            height: auto;
-        }
-
-        #welcome-text {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 13px;
-            z-index: 1;
-        }
-
-        section {
             padding: 50px 20px;
-            border-radius: 10px;
-            margin: 20px auto;
+            background-color: #282828;
+            color: #fff;
         }
 
-        h2 {
-            font-size: 28px;
-            margin-bottom: 20px;
+        h1 {
+            margin: 0;
+            font-size: 2.5em;
         }
 
         p {
-            font-size: 16px;
+            font-size: 1.2em;
+            margin: 20px 0;
         }
 
-        .product-performance {
+        nav {
+            background-color: #333;
+            padding: 15px 0;
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+        }
+
+        nav ul li {
+            margin: 0 15px;
+        }
+
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: bold;
+            background-image: linear-gradient(to right, #3498db, #e74c3c);
+            padding: 10px 20px;
+            border-radius: 5px;
+            transition: background 0.4s, color 0.4s;
+        }
+
+        nav ul li a:hover {
+            background-image: linear-gradient(to right, #e74c3c, #3498db);
+            color: #fff;
+            text-decoration: none;
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        section {
+            padding: 60px 20px;
+            background-color: #fff;
             text-align: center;
+        }
+
+        h2 {
+            text-align: center;
+            margin-bottom: 20px;
+            font-size: 2em;
+        }
+
+        .product-performance div {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            flex-wrap: wrap;
         }
 
         .product-performance img {
             width: 200px;
-            height: 200px;
-            border: 2px solid #ddd;
-            border-radius: 5px;
-            margin: 10px;
-            cursor: pointer;
+            height: auto;
+            border-radius: 10px;
+            transition: transform 0.3s;
+        }
+
+        .product-performance img:hover {
+            transform: scale(1.05);
+        }
+
+        .client-logos {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            flex-wrap: wrap;
         }
 
         .client-logos img {
-            max-width: 100px;
-            max-height: 50px;
-            margin: 10px;
+            width: 150px;
+            height: auto;
+            transition: transform 0.3s;
         }
 
-        .contact h2,
-        .contact p,
-        .contact a {
-            color: #fff;
+        .client-logos img:hover {
+            transform: scale(1.1);
         }
 
-        .contact a:hover {
-            text-decoration: underline;
-        }
-
-        .button-link {
+        .gradient-link {
             display: inline-block;
             padding: 10px 20px;
-            border: 2px solid transparent;
-            border-radius: 50px;
-            background-image: linear-gradient(to right, #3498db, #e74c3c); /* Gradient background */
+            background-image: linear-gradient(to right, #3498db, #e74c3c);
+            color: #fff;
             text-decoration: none;
-            color: #fff;
+            border-radius: 5px;
             font-weight: bold;
-            transition: background 0.4s, border 0.4s, box-shadow 0.4s;
+            transition: background 0.4s, color 0.4s;
+            margin-top: 10px;
         }
 
-        .button-link:hover {
-            background-image: linear-gradient(to right, #e74c3c, #3498db); /* Gradient background on hover */
-            border: 2px solid #fff;
+        .gradient-link:hover {
+            background-image: linear-gradient(to right, #e74c3c, #3498db);
+            color: #fff;
+            text-decoration: none;
             box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        footer {
+            text-align: center;
+            padding: 40px 20px;
+            background-color: #282828;
             color: #fff;
         }
 
-        /* Media query for smaller screens */
-        @media screen and (max-width: 768px) {
-            #welcome-text {
-                font-size: 11px;
-            }
-
-            #logo-section img {
-                max-width: 53px;
-            }
-
-            h2 {
-                font-size: 24px;
-            }
-
-            p {
-                font-size: 14px;
-            }
-
-            .product-performance img {
-                width: 150px;
-                height: 150px;
-            }
+        .see-more {
+            text-align: center;
+            margin-top: 20px;
         }
     </style>
-    <!-- Fancybox CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css">
 </head>
 <body>
 
-    <header>
-        <div id="top-section">
-            <div id="logo-section">
-                <a href="/">
-                    <img src="/images/MRTex.png" alt="MR Tex Logo">
-                </a>
-            </div>
-            <div id="welcome-text">
-                <h1></h1>
-            </div>
-        </div>
-    </header>
+<header>
+    <h1>Your Company Name</h1>
+    <p>Innovative Textile Solutions</p>
+</header>
 
-    <section class="about-us">
-        <h2>About Us</h2>
-        <p>Your Trusted Partner for Innovative Textile Solutions. Backed by extensive experience with top global brands, we offer tailored R&D and manufacturing services. Our team’s expertise ensures high-quality results, meeting your unique needs with precision and reliability <a href="/about-us" id="see-more-button">read more...</a></p>
-    </section>
+<nav>
+    <ul>
+        <li><a href="#about-us">About Us</a></li>
+        <li><a href="#products">Products</a></li>
+        <li><a href="#clients">Clients</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
 
-    <section class="product-performance">
-        <h2>Product Performance</h2>
-        <div>
-            <a data-fancybox="gallery" href="/images/products/P1.jpg"><img src="/images/products/P1.jpg" alt="Product 1"></a>
-            <a data-fancybox="gallery" href="/images/products/P2.jpg"><img src="/images/products/P2.jpg" alt="Product 2"></a>
-            <a data-fancybox="gallery" href="/images/products/P3.jpg"><img src="/images/products/P3.jpg" alt="Product 3"></a>
-            <a data-fancybox="gallery" href="/images/products/P4.jpg"><img src="/images/products/P4.jpg" alt="Product 4"></a>
-        </div>
-    </section>
-    <div class="see-more">
-        <a href="/products">View products...</a>
+<section id="about-us" class="about-us">
+    <h2>About Us</h2>
+    <p>Your Trusted Partner for Innovative Textile Solutions. Backed by extensive experience with top global brands, we offer tailored R&D and manufacturing services. Our team’s expertise ensures high-quality results, meeting your unique needs with precision and reliability 
+        <a href="/about-us" id="see-more-button" class="gradient-link">read more...</a>
+    </p>
+</section>
+
+<section id="products" class="product-performance">
+    <h2>Product Performance</h2>
+    <div>
+        <a data-fancybox="gallery" href="/images/products/P1.jpg"><img src="/images/products/P1.jpg" alt="Product 1"></a>
+        <a data-fancybox="gallery" href="/images/products/P2.jpg"><img src="/images/products/P2.jpg" alt="Product 2"></a>
+        <a data-fancybox="gallery" href="/images/products/P3.jpg"><img src="/images/products/P3.jpg" alt="Product 3"></a>
+        <a data-fancybox="gallery" href="/images/products/P4.jpg"><img src="/images/products/P4.jpg" alt="Product 4"></a>
     </div>
+</section>
 
-    <section class="clients">
-        <h2>Team Experience with Renowned Brands</h2>
-        <div class="client-logos">
-            <!-- Add your client logos with clickable links -->
-            <a href="#"><img src="/images/uspa.png" alt="USPA"></a>
-            <a href="#"><img src="/images/buffalo.png" alt="Buffalo David Bitton"></a>
-            <a href="#"><img src="/images/cK.png" alt="CK"></a>
-            <a href="#"><img src="/images/max.png" alt="max"></a>
-            <!-- Add more logos as needed -->
-        </div>
-        <p><a href="/client" id="see-more-button">and others</a></p>
-    </section>
+<div class="see-more">
+    <a href="/products" class="gradient-link">View products...</a>
+</div>
 
-    <section class="contact">
-        <h2>Contact Us</h2>
-        <p>We would love to hear from you! Connect with us on 
-            <a href="https://wa.me/+8801712548608" class="button-link">
-                WhatsApp
-            </a> 
-            or drop us an 
-            <a href="mailto:inquiries@mrtex.info" class="button-link">
-                Email
-            </a>.
-        </p>
-        <p>House # 05 (2nd Floor), Road # 18, Sector # 10, Uttara, Dhaka-1230, Bangladesh</p>
-    </section>
+<section id="clients" class="clients">
+    <h2>Team Experience with Renowned Brands</h2>
+    <div class="client-logos">
+        <a href="#"><img src="/images/uspa.png" alt="USPA"></a>
+        <a href="#"><img src="/images/buffalo.png" alt="Buffalo David Bitton"></a>
+        <a href="#"><img src="/images/cK.png" alt="CK"></a>
+        <a href="#"><img src="/images/max.png" alt="max"></a>
+    </div>
+    <p><a href="/client" id="see-more-button" class="gradient-link">and others</a></p>
+</section>
 
-    <!-- Fancybox JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
+<footer id="contact">
+    <h2>Contact Us</h2>
+    <p>Reach out to us for collaboration or inquiries.</p>
+    <a href="mailto:info@yourcompany.com" class="gradient-link">Email Us</a>
+    <a href="https://wa.me/your-number" class="gradient-link">WhatsApp Us</a>
+</footer>
 
 </body>
 </html>
