--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Company Name</title>
+    <title>MR Tex</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -146,7 +146,7 @@
 <body>
 
 <header>
-    <h1>Your Company Name</h1>
+    <h1>MR Tex</h1>
     <p>Innovative Textile Solutions</p>
 </header>
 
@@ -186,7 +186,7 @@
         <a href="#"><img src="/images/uspa.png" alt="USPA"></a>
         <a href="#"><img src="/images/buffalo.png" alt="Buffalo David Bitton"></a>
         <a href="#"><img src="/images/cK.png" alt="CK"></a>
-        <a href="#"><img src="/images/max.png" alt="max"></a>
+        <a href="#"><img src="/images/max.png" alt="Max"></a>
     </div>
     <p><a href="/client" id="see-more-button" class="gradient-link">and others</a></p>
 </section>
@@ -194,8 +194,8 @@
 <footer id="contact">
     <h2>Contact Us</h2>
     <p>Reach out to us for collaboration or inquiries.</p>
-    <a href="mailto:info@yourcompany.com" class="gradient-link">Email Us</a>
-    <a href="https://wa.me/your-number" class="gradient-link">WhatsApp Us</a>
+    <a href="mailto:info@mrtex.com" class="gradient-link">Email Us</a>
+    <a href="https://wa.me/+8801712548608" class="gradient-link">WhatsApp</a>
 </footer>
 
 </body>
